--- a/components/styles/Layout.module.css
+++ b/components/styles/Layout.module.css
@@ -1,21 +1,34 @@
 .header {
+  position: relative;
+  position: fixed;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 1rem;
-  position: absolute;
   inset-inline: 0;
+  z-index: 100;
+  /* background-color: var(--surface-1); */
+}
+.header::before {
+  content: "";
+  position: absolute;
+  inset: 0 0;
+  backdrop-filter: blur(8px);
+  /* border: 1px solid slateblue; */
+  background-color: var(--surface-light-transparent);
+  /* background-color: var(--accent-transparent); */
   z-index: 50;
-  background-color: var(--surface-1);
 }
 .header h1 {
   font-size: large;
   font-weight: bold;
   color: var(--text-grey);
+  z-index: 100;
 }
 .logo {
   height: 2.5rem;
   width: 2.75rem !important;
+  z-index: 100;
 }
 
 /* @media (prefers-color-scheme: dark){
