--- a/styles/globals.css
+++ b/styles/globals.css
@@ -54,8 +54,10 @@
   --accent: hsl(28, 87%, 75%);
   --accent-dark: hsl(28, 70%, 60%);
   --surface-dark: hsl(240, 25%, 10%);
-  --surface-dark-transparent: hsla(240, 25%, 10%, .5);
   --surface-light: hsl(28, 0%, 95%);
+  --accent-transparent: hsla(28, 87%, 75%, 0.596);
+  --surface-dark-transparent: hsla(240, 25%, 10%, 0.5);
+  --surface-light-transparent: hsla(0, 0%, 80%, 0.747);
   --surface-1: hsl(28, 0%, 80%);
   --surface-2: hsl(28, 0%, 60%);
   --surface-3: hsl(28, 0%, 40%);
@@ -64,7 +66,7 @@
   --text-dark: var(--surface-dark);
 }
 html,
-body{
+body {
   background: var(--surface-light);
   color: var(--text-dark);
   /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -83,36 +85,36 @@ a {
   color: inherit;
   text-decoration: none;
 }
-form{
+form {
   padding: 0 1rem;
   display: grid;
 }
 input,
 textarea,
-select{
+select {
   background-color: var(--surface-light);
-  padding: .5rem;
+  padding: 0.5rem;
   border-radius: 3px;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
-textarea{
+textarea {
   resize: none;
   height: 10rem;
 }
-small{
+small {
   color: var(--accent-dark);
 }
-input.date{
+input.date {
   color: var(--surface-2);
   font-size: 1.1rem;
 }
-label{
+label {
   font-weight: bolder;
   color: var(--text-grey);
 }
 input:focus,
 textarea:focus,
-select:focus{
+select:focus {
   outline: 2px solid var(--accent);
 }
 .carousel_text {
@@ -126,10 +128,10 @@ select:focus{
   flex-direction: column;
   align-items: center;
 }
-.main{
-    /* border: 1px solid hotpink; */
-    margin-bottom: 4rem;
-    padding-top: 2.5rem;
+.main {
+  /* border: 1px solid hotpink; */
+  margin-bottom: 4rem;
+  padding-top: 2.5rem;
 }
 .image {
   position: relative;
@@ -137,10 +139,10 @@ select:focus{
   width: 100%;
   /* border: 1px solid hotpink; */
 }
-.cinema_image{
+.cinema_image {
   aspect-ratio: 3 / 5;
 }
-.title{
+.title {
   font-size: 1.5rem;
   font-weight: bolder;
 }
@@ -202,7 +204,7 @@ select:focus{
   color: var(--accent);
 }
 
-.date_and_time{
+.date_and_time {
   color: var(--accent-dark);
 }
 .card-container {
@@ -254,7 +256,7 @@ select:focus{
 .btn {
   margin-block: 1rem;
   border: none;
-  border-radius: .25rem;
+  border-radius: 0.25rem;
   padding: 0.75rem 1rem;
   background-color: var(--accent);
   color: var(--text-dark);
@@ -268,4 +270,25 @@ select:focus{
   display: grid;
   grid-auto-flow: column;
   place-items: center;
+}
+
+.two_column_grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem 0;
+  place-items: center;
+}
+
+.scrollable_grid{
+  display: grid;
+  grid-auto-flow: column;
+  column-gap: 3rem;
+  overflow-x: auto;
+}
+.carousel_container {
+  position: relative;
+  border-radius: 0.5rem 0 0 .5rem;
+  max-width: 11.5rem;
+  width: 10rem;
+  margin-top: 1rem;
 }
