--- a/styles/globals.css
+++ b/styles/globals.css
@@ -87,6 +87,8 @@ a {
 }
 form {
   padding: 0 1rem;
+}
+form > :first-child {
   display: grid;
 }
 input,
@@ -279,7 +281,7 @@ select:focus {
   place-items: center;
 }
 
-.scrollable_grid{
+.scrollable_grid {
   display: grid;
   grid-auto-flow: column;
   column-gap: 3rem;
@@ -287,7 +289,7 @@ select:focus {
 }
 .carousel_container {
   position: relative;
-  border-radius: 0.5rem 0 0 .5rem;
+  border-radius: 0.5rem 0 0 0.5rem;
   max-width: 11.5rem;
   width: 10rem;
   margin-top: 1rem;
