--- a/styles/globals.css
+++ b/styles/globals.css
@@ -89,6 +89,7 @@ form {
   padding: 0 1rem;
 }
 form > :first-child {
+  display: -ms-grid;
   display: grid;
 }
 input,
@@ -171,7 +172,10 @@ select:focus {
   /* padding: 0 1rem; */
 }
 .divider p {
-  border-bottom: 2px solid var(--accent);
+  border-bottom: 3px solid var(--accent);
+  padding: 0 0.75rem;
+  font-size: 1.25rem;
+  font-weight: bolder;
 }
 
 /* 
@@ -189,6 +193,7 @@ select:focus {
   line-height: 0.9;
 }
 .card-preview .details {
+  display: -ms-grid;
   display: grid;
 }
 .date {
@@ -227,12 +232,13 @@ select:focus {
 .card-container::before {
   content: "<";
   position: absolute;
+  display: -ms-grid;
   display: grid;
   place-items: center;
   left: 0.5rem;
   aspect-ratio: 1 / 3;
   height: 3rem;
-  padding-inline: 0.375rem;
+  padding: 0 0.375rem;
   background-color: hsla(0, 0%, 50%, 0.37);
   cursor: pointer;
   color: grey;
@@ -242,12 +248,13 @@ select:focus {
 .card-container::after {
   content: ">";
   position: absolute;
+  display: -ms-grid;
   display: grid;
   place-items: center;
   right: 0.5rem;
   aspect-ratio: 1 / 3;
   height: 3rem;
-  padding-inline: 0.375rem;
+  padding: 0 0.375rem;
   background-color: hsla(0, 0%, 50%, 0.37);
   cursor: pointer;
   color: grey;
@@ -256,7 +263,7 @@ select:focus {
 }
 
 .btn {
-  margin-block: 1rem;
+  margin: 1rem 0;
   border: none;
   border-radius: 0.25rem;
   padding: 0.75rem 1rem;
@@ -269,19 +276,23 @@ select:focus {
 }
 
 .ticket {
+  display: -ms-grid;
   display: grid;
   grid-auto-flow: column;
   place-items: center;
 }
 
 .two_column_grid {
+  display: -ms-grid;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  -ms-grid-columns: auto-track-list;
   gap: 1rem 0;
   place-items: center;
 }
 
 .scrollable_grid {
+  display: -ms-grid;
   display: grid;
   grid-auto-flow: column;
   column-gap: 3rem;
