--- a/components/modalComponents/styles/WebForm.module.css
+++ b/components/modalComponents/styles/WebForm.module.css
@@ -1,11 +1,33 @@
-.flexed_details{
+.flexed_details {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 100%;
+  overflow: hidden;
+}
+.flexed_details :nth-child(2) {
+  max-width: 9rem;
+}
+.price {
+  font-weight: bold;
+  color: var(--text-grey);
+}
+.price > :last-child {
+  max-width: 5rem;
+  margin-left: 0.125rem;
+  border-radius: 0 3px 3px 0;
+}
+
+/* .flexed_details{
    display: flex;
    align-items: center;
    justify-content: space-between;
+   column-gap: 1rem;
 }
-.flexed_details :nth-child(2){
-   max-width: 9rem;
+.flexed_details > * {
+   width: 100%;
 }
+
 .price{
    margin: 0 auto;
    font-weight: bold;
@@ -15,4 +37,4 @@
    max-width: 5rem;
    margin-left: .125rem;
    border-radius: 0 3px 3px 0;
-}
+} */
