--- a/components/styles/Navbar.module.css
+++ b/components/styles/Navbar.module.css
@@ -10,6 +10,7 @@
   content: "";
   position: absolute;
   inset: 0 0;
+  -webkit-backdrop-filter: blur(20px);
   backdrop-filter: blur(20px);
   /* border: 1px solid slateblue; */
   background-color: var(--surface-light-transparent);
