--- a/components/styles/UploadModal.module.css
+++ b/components/styles/UploadModal.module.css
@@ -1,14 +1,18 @@
 .ul {
+  display: -ms-grid;
   display: grid;
   place-items: center;
   grid-auto-flow: column;
+  align-items: stretch;
 }
 .ul li {
-  padding-block: 0.75rem;
+  padding: 0.75rem 0;
   text-align: center;
-  border-right: 1px solid var(--text-grey);
   width: 100%;
   cursor: pointer;
+}
+.ul li:not(:last-child) {
+  border-right: 1px solid var(--text-grey);
 }
 .ul .active {
   border-bottom: 3px solid var(--accent-dark);
@@ -27,12 +31,12 @@
   width: 100%;
   background: linear-gradient(135deg, var(--surface-1), var(--surface-2));
 
+  display: -ms-grid;
   display: grid;
   place-items: center;
   cursor: pointer;
 }
 .icon {
-  /* "h-6 w-6 text-red-600 */
   aspect-ratio: 1 / 1;
   color: var(--accent-dark);
   font-size: 2.5rem;
@@ -51,7 +55,7 @@
   width: 100%;
   background-color: var(--accent);
   padding: 0.5rem;
-  margin: .5rem 0 1rem;
+  margin: 0.5rem 0 1rem;
 
   transition: 0.2s;
   transition-property: background-color;
@@ -59,27 +63,25 @@
 .uploadBtn:hover {
   background-color: var(--accent-dark);
 }
-.uploadBtn:disabled{
+.uploadBtn:disabled {
   background-color: var(--surface-1);
   pointer-events: none;
 }
 
 .flexed_details {
+  display: -ms-grid;
   display: grid;
   grid-auto-flow: column;
   column-gap: 1rem;
-  margin-block: 0.5rem;
+  margin: 0.5rem 0;
 }
-.flexed_details > * {
-  width: 100%;
-}
-.price{
-  margin: .5rem auto 0;
+.price {
+  margin: 0.5rem auto 0;
   font-weight: bold;
   color: var(--text-grey);
 }
-.price > :last-child{
+.price > :last-child {
   max-width: 5rem;
-  margin-left: .125rem;
+  margin-left: 0.125rem;
   border-radius: 0 3px 3px 0;
 }
