--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,9 +44,6 @@
 *,
 *::after,
 *::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
   overscroll-behavior: none;
 }
 :root {
@@ -69,8 +66,8 @@ html,
 body {
   background: var(--surface-light);
   color: var(--text-dark);
-  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-  Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-family: "Quicksand", sans-serif;
 }
 p {
@@ -132,7 +129,6 @@ select:focus {
   align-items: center;
 }
 .main {
-  /* border: 1px solid hotpink; */
   margin-bottom: 4rem;
   padding-top: 2.5rem;
 }
@@ -140,7 +136,6 @@ select:focus {
   position: relative;
   aspect-ratio: 1 / 1;
   width: 100%;
-  /* border: 1px solid hotpink; */
 }
 .cinema_image {
   aspect-ratio: 3 / 5;
@@ -185,7 +180,6 @@ select:focus {
   position: relative;
   display: flex;
   padding: 0 1.5rem;
-  /* border: 1px solid hotpink; */
 }
 .card-preview .title {
   font-size: 1.5rem;
@@ -200,7 +194,6 @@ select:focus {
   font-size: 1.25rem;
   line-height: 1.1;
   font-weight: 100;
-  /* text-align: center; */
   color: black;
 }
 .date > span {
@@ -219,8 +212,6 @@ select:focus {
   align-items: center;
   overflow: auto;
   padding: 2rem 1rem;
-  /* scroll-snap-type: mandatory; */
-  /* scroll-behavior: snap; */
 }
 .card-container .image {
   height: 10rem;
@@ -271,7 +262,6 @@ select:focus {
   color: var(--text-dark);
   text-transform: uppercase;
   font-weight: bold;
-  /* letter-spacing: 1px; */
   cursor: pointer;
 }
 
@@ -285,12 +275,14 @@ select:focus {
 .two_column_grid {
   display: -ms-grid;
   display: grid;
+  -ms-grid-columns: track-list;
   grid-template-columns: repeat(2, 1fr);
   -ms-grid-columns: auto-track-list;
-  gap: 1rem 0;
-  place-items: center;
+  justify-items: center;
 }
-
+.two_column_grid > * {
+  text-align: center;
+}
 .scrollable_grid {
   display: -ms-grid;
   display: grid;
@@ -298,10 +290,9 @@ select:focus {
   column-gap: 3rem;
   overflow-x: auto;
 }
-.carousel_container {
-  position: relative;
-  border-radius: 0.5rem 0 0 0.5rem;
-  max-width: 11.5rem;
-  width: 10rem;
+.heading {
+  text-align: center;
+  font-weight: bold;
+  font-size: x-large;
   margin-top: 1rem;
 }
