--- a/components/styles/Layout.module.css
+++ b/components/styles/Layout.module.css
@@ -38,6 +38,15 @@
   border-radius: .25rem;
   font-weight: bolder;
 }
+.pageName{
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  display: block;
+  overflow: hidden;
+  width: 13rem;
+  max-width: 100%;
+}
 /* @media (prefers-color-scheme: dark){
    .header{
       background: linear-gradient(var(--surface-dark-transparent) 80%, transparent);
