--- a/components/styles/Layout.module.css
+++ b/components/styles/Layout.module.css
@@ -8,15 +8,15 @@
   inset-inline: 0;
   z-index: 100;
   /* background-color: var(--surface-1); */
+  background-color: var(--surface-light-transparent);
 }
 .header::before {
   content: "";
   position: absolute;
   inset: 0 0;
-  -webkit-backdrop-filter:blur(8px);
+  -webkit-backdrop-filter: blur(8px);
   backdrop-filter: blur(8px);
-  /* border: 1px solid slateblue; */
-  background-color: var(--surface-light-transparent);
+  background-color: transparent;
   /* background-color: var(--accent-transparent); */
   z-index: 50;
 }
@@ -31,14 +31,14 @@
   width: 2.75rem !important;
   z-index: 100;
 }
-.upload_link{
+.upload_link {
   z-index: 100;
   background-color: var(--accent);
-  padding: 0 .5rem;
-  border-radius: .25rem;
+  padding: 0 0.5rem;
+  border-radius: 0.25rem;
   font-weight: bolder;
 }
-.pageName{
+.pageName {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
