--- a/styles/globals.css
+++ b/styles/globals.css
@@ -144,16 +144,18 @@ select:focus {
   font-size: 1.5rem;
   font-weight: bolder;
 }
-.details {
+
+.details{
   padding: 1rem;
 }
+
 .details > *:not(:nth-child(1)) {
   padding-top: 0.875rem;
 }
 .date_and_time {
   display: flex;
   justify-content: space-between;
-  padding-right: 1.5rem;
+  padding-right: .5rem;
   font-size: 1.5rem;
   font-weight: 600;
   color: var(--accent);
@@ -164,10 +166,9 @@ select:focus {
  */
 .divider {
   margin-top: 1rem;
-  /* padding: 0 1rem; */
 }
 .divider p {
-  border-bottom: 3px solid var(--accent);
+  border-bottom: 2px solid var(--accent);
   padding: 0 0.75rem;
   font-size: 1.25rem;
   font-weight: bolder;
@@ -191,14 +192,14 @@ select:focus {
   display: grid;
 }
 .date {
-  font-size: 1.25rem;
+  font-size: 1.35rem;
   line-height: 1.1;
   font-weight: 100;
-  color: black;
+  color: var(--text-dark);
 }
 .date > span {
   font-weight: bold;
-  font-size: 1rem;
+  font-size: 1.25rem;
   text-transform: uppercase;
   display: block;
   color: var(--accent);
@@ -214,43 +215,36 @@ select:focus {
   padding: 2rem 1rem;
 }
 .card-container .image {
+  min-width: min-content;
   height: 10rem;
 }
 
 .card-container > *:not(:nth-child(1)) {
-  border-left: 1px solid var(--accent);
+  border-left: 2px solid var(--accent);
+}
+
+.card-container::after,
+.card-container::before {
+  position: absolute;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  aspect-ratio: 1 / 3;
+  height: 3rem;
+  padding: 0 0.375rem;
+  background-color: hsla(0, 0%, 50%, 0.37);
+  cursor: pointer;
+  color: grey;
+  font-size: 20px;
+  z-index: 5;
 }
 .card-container::before {
   content: "<";
-  position: absolute;
-  display: -ms-grid;
-  display: grid;
-  place-items: center;
   left: 0.5rem;
-  aspect-ratio: 1 / 3;
-  height: 3rem;
-  padding: 0 0.375rem;
-  background-color: hsla(0, 0%, 50%, 0.37);
-  cursor: pointer;
-  color: grey;
-  font-size: 20px;
-  z-index: 5;
 }
 .card-container::after {
   content: ">";
-  position: absolute;
-  display: -ms-grid;
-  display: grid;
-  place-items: center;
   right: 0.5rem;
-  aspect-ratio: 1 / 3;
-  height: 3rem;
-  padding: 0 0.375rem;
-  background-color: hsla(0, 0%, 50%, 0.37);
-  cursor: pointer;
-  color: grey;
-  font-size: 20px;
-  z-index: 5;
 }
 
 .btn {
@@ -270,6 +264,9 @@ select:focus {
   display: grid;
   grid-auto-flow: column;
   place-items: center;
+}
+.ticket .btn {
+  margin: 0;
 }
 
 .two_column_grid {
