--- a/components/styles/Layout.module.css
+++ b/components/styles/Layout.module.css
@@ -2,7 +2,7 @@
   position: relative;
   position: fixed;
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: center;
   padding: 0 1rem;
   inset-inline: 0;
@@ -37,6 +37,7 @@
   padding: 0 0.5rem;
   border-radius: 0.25rem;
   font-weight: bolder;
+  cursor: pointer;
 }
 .pageName {
   overflow: hidden;
