--- a/components/styles/Layout.module.css
+++ b/components/styles/Layout.module.css
@@ -2,7 +2,7 @@
   position: relative;
   position: fixed;
   display: flex;
-  /* justify-content: space-between; */
+  justify-content: space-between;
   align-items: center;
   padding: 0 1rem;
   inset-inline: 0;
@@ -20,10 +20,18 @@
   /* background-color: var(--accent-transparent); */
   z-index: 50;
 }
+.headerLinks{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 .header h1 {
   font-size: large;
   font-weight: bold;
   color: var(--text-grey);
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   z-index: 100;
 }
 .logo {
@@ -38,6 +46,7 @@
   border-radius: 0.25rem;
   font-weight: bolder;
   cursor: pointer;
+  margin-right: 1.5rem;
 }
 .pageName {
   overflow: hidden;
